--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "babel-preset-stage-1": "^6.24.1",
+    "chromedriver": "^83.0.0",
+    "geckodriver": "^1.19.1",
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-image": "^1.3.1",
     "react-images": "^0.5.17",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "selenium-webdriver": "^4.0.0-alpha.7"
   },
   "scripts": {
     "start": "react-scripts start",
